Navbar and Header created

--- a/index.html
+++ b/index.html
@@ -27,15 +27,76 @@
       rel="stylesheet"
     />
     <!-- stylesheet -->
-     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
-        <h1 class="text-6xl text-center belleza">Hello There</h1>
+      <!-- navbar -->
+      <div class="navbar bg-base-100 shadow-sm px-5 md:px-16 lg:px-32">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="-1"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+            >
+              <li><a>Home</a></li>
+              <li><a>Product</a></li>
+              <li><a>About</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-xl">Comfy_Corner</a>
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a>Home</a></li>
+            <li><a>Product</a></li>
+            <li><a>About</a></li>
+            <li><a>Contact</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+      </div>
+      <!-- header section -->
+      <div
+        class="hero min-h-24 md:min-h-[40vh] lg:min-h-[80vh]"
+        style="
+          background-image: url(./Assets/banner-image.png);
+        "
+      >
+        <div class="hero-overlay"></div>
+        <div class="hero-content text-neutral-content">
+          <div class="max-w-screen-lg">
+            <h1 class="mb-5 text-5xl font-bold">Best Collection For You</h1>
+            <p class="mb-5">
+              Discover the latest trends in fashion, electronics and more.Shop with confidence and style at Comfy_Corner.
+            </p>
+            <button class="btn btn-primary">Shop Now</button>
+          </div>
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
     <!-- js -->
-     <script src="./scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
