--- a/index.html
+++ b/index.html
@@ -78,23 +78,106 @@
       <!-- header section -->
       <div
         class="hero min-h-24 md:min-h-[40vh] lg:min-h-[80vh]"
-        style="
-          background-image: url(./Assets/banner-image.png);
-        "
+        style="background-image: url(./Assets/banner-image.png)"
       >
         <div class="hero-overlay"></div>
         <div class="hero-content text-neutral-content">
           <div class="max-w-screen-lg">
             <h1 class="mb-5 text-5xl font-bold">Best Collection For You</h1>
             <p class="mb-5">
-              Discover the latest trends in fashion, electronics and more.Shop with confidence and style at Comfy_Corner.
+              Discover the latest trends in fashion, electronics and more.Shop
+              with confidence and style at Comfy_Corner.
             </p>
             <button class="btn btn-primary">Shop Now</button>
           </div>
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- why choose us -->
+      <section class="py-10 md:py-20 bg-gray-100">
+        <h1 class="text-4xl font-bold text-center">Why Choose Us</h1>
+        <p class="text-center">
+          We provide the best shopping experience with top notch services.
+        </p>
+        <!-- reason container -->
+        <div class="px-20 py-16 flex flex-col items-center lg:flex-row gap-10">
+          <!-- delivery -->
+          <div
+            class="bg-white flex flex-col gap-7 md:w-80 shadow-2xl px-4 py-6"
+          >
+            <div class="bg-white p-1 ml-2 mt-[-60px] w-fit shadow-lg">
+              <div class="bg-sky-100 p-5">
+                <i
+                  class="fa-regular fa-truck"
+                  style="color: rgba(7, 119, 205, 1)"
+                ></i>
+              </div>
+            </div>
+            <h3 class="font-bold font-xl">Fast Delivery</h3>
+            <p>
+              Get your orders delivered to your doorstep quickly and
+              efficiently.
+            </p>
+          </div>
+          <!-- support -->
+          <div
+            class="bg-white flex flex-col gap-7 md:w-80 shadow-2xl px-4 py-6"
+          >
+            <div class="bg-white p-1 ml-2 mt-[-60px] w-fit shadow-lg">
+              <div class="bg-sky-100 p-5">
+                <i
+                  class="fa-regular fa-headphones"
+                  style="color: rgba(7, 119, 205, 1)"
+                ></i>
+              </div>
+            </div>
+            <h3 class="font-bold font-xl">24/7 Support</h3>
+            <p>Our support team is available around the clock to assist you.</p>
+          </div>
+          <!-- payment -->
+          <div
+            class="bg-white flex flex-col gap-7 md:w-80 shadow-2xl px-4 py-6"
+          >
+            <div class="bg-white p-1 ml-2 mt-[-60px] w-fit shadow-lg">
+              <div class="bg-sky-100 p-5">
+                <i
+                  class="fa-solid fa-shield-heart"
+                  style="color: rgba(7, 119, 205, 1)"
+                ></i>
+              </div>
+            </div>
+            <h3 class="font-bold font-xl">Secure Parent</h3>
+            <p>
+              Experience secure and safe transaction with our encrypted payment
+              systems.
+            </p>
+          </div>
+          <!-- return -->
+          <div
+            class="bg-white flex flex-col gap-7 md:w-80 shadow-2xl px-4 py-6"
+          >
+            <div class="bg-white p-1 ml-2 mt-[-60px] w-fit shadow-lg">
+              <div class="bg-sky-100 p-5">
+                <i
+                  class="fa-solid fa-arrows-rotate"
+                  style="color: rgba(7, 119, 205, 1)"
+                ></i>
+              </div>
+            </div>
+            <h3 class="font-bold font-xl">Easy Return</h3>
+            <p>Not satisfied? Return your products easily within 30 days.</p>
+          </div>
+        </div>
+      </section>
+      <!-- trending Now -->
+      <section class="px-20 lg:px-20 py-10 lg:py-20">
+        <h1 class="font-bold text-2xl lg:text-5xl">Trending Now</h1>
+        <!-- trending product container -->
+        <div id="trendingProduct" class="py-16 flex flex-col lg:flex-row gap-10">
+        </div>
+      </section>
+    </main>
     <footer></footer>
     <!-- js -->
     <script src="./scripts/script.js"></script>
