Footer sectio created

--- a/index.html
+++ b/index.html
@@ -174,11 +174,70 @@
       <section class="px-20 lg:px-20 py-10 lg:py-20">
         <h1 class="font-bold text-2xl lg:text-5xl">Trending Now</h1>
         <!-- trending product container -->
-        <div id="trendingProduct" class="py-16 flex flex-col lg:flex-row gap-10">
-        </div>
+        <div
+          id="trendingProduct"
+          class="py-16 flex flex-col lg:flex-row gap-10"
+        ></div>
       </section>
     </main>
-    <footer></footer>
+    <footer
+      class="px-20 py-16 text-white bg-black"
+    >
+      <div class="grid grid-cols-2 lg:grid-cols-4 gap-20">
+        <div>
+          <h1>Comfy_Corner</h1>
+          <p>
+            Your one step shop for all your fashion and lifestyle needs. Quality
+            products, fast delivery, and excellent support.
+          </p>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">Quick Links</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><a href="">Support</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Shopping</a></li>
+            <li><a href="">Return</a></li>
+            <li><a href="">Privacy Policy</a></li>
+          </ul>
+        </div>
+        <div>
+          <h1>Subscribe to our Newsletter</h1>
+          <p class="py-4">
+            The latest news, articles and resources send to your inbox weekly.
+          </p>
+          <div class="flex gap-4">
+            <input
+              type="text"
+              placeholder="Enter your email"
+              class="input input-primary"
+            />
+            <button class="btn btn-primary">Primary</button>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="flex justify-between items-center">
+        <div>
+          <p>@ Comfy Corner. All right reserved.</p>
+        </div>
+        <div class="flex gap-4">
+          <i class="fa-brands fa-facebook" style="color: rgba(230, 230, 230, 1.00);"></i>
+          <i class="fa-brands fa-square-twitter" style="color: rgba(230, 230, 230, 1.00);"></i>
+          <i class="fa-brands fa-instagram" style="color: rgba(230, 230, 230, 1.00);"></i>
+          <i class="fa-brands fa-telegram" style="color: rgba(230, 230, 230, 1.00);"></i>
+          <i class="fa-solid fa-envelope" style="color: rgba(230, 230, 230, 1.00);"></i>
+        </div>
+      </div>
+    </footer>
     <!-- js -->
     <script src="./scripts/script.js"></script>
   </body>
