--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
               tabindex="-1"
               class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
             >
-              <li><a>Home</a></li>
+              <li><a class="text-indigo-500">Home</a></li>
               <li><a>Product</a></li>
               <li><a>About</a></li>
               <li><a>Contact</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-xl">Comfy_Corner</a>
+          <a class="btn btn-ghost text-xl text-indigo-500">Comfy_Corner</a>
         </div>
         <div class="navbar-center hidden lg:flex">
-          <ul class="menu menu-horizontal px-1">
-            <li><a>Home</a></li>
+          <ul class="menu menu-horizontal px-1 font-semibold">
+            <li><a class="text-indigo-500">Home</a></li>
             <li><a>Product</a></li>
             <li><a>About</a></li>
             <li><a>Contact</a></li>
@@ -77,15 +77,17 @@
       </div>
       <!-- header section -->
       <div
-        class="hero min-h-24 md:min-h-[40vh] lg:min-h-[80vh]"
-        style="background-image: url(./Assets/banner-image.png)"
+        class="min-h-24 md:min-h-[40vh] lg:min-h-[80vh]"
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('./Assets/banner-image.png');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;"
       >
-        <div class="hero-overlay"></div>
-        <div class="hero-content text-neutral-content">
-          <div class="max-w-screen-lg">
-            <h1 class="mb-5 text-5xl font-bold">Best Collection For You</h1>
-            <p class="mb-5">
-              Discover the latest trends in fashion, electronics and more.Shop
+        <div class="pl-10 py-5 lg:pl-44 lg:pt-44">
+          <div class="text-gray-300">
+            <h1 class="mb-3 lg:mb-5 text-2xl lg:text-5xl font-bold">Best Collection For You</h1>
+            <p class="text-xs lg:text-lg mb-3 lg:mb-5">
+              Discover the latest trends in fashion, electronics and more. <br> Shop
               with confidence and style at Comfy_Corner.
             </p>
             <button class="btn btn-primary">Shop Now</button>
@@ -176,33 +178,33 @@
         <!-- trending product container -->
         <div
           id="trendingProduct"
-          class="py-16 flex flex-col lg:flex-row gap-10"
+          class="py-16 grid grid-cols-1 lg:grid-cols-3 gap-10"
         ></div>
       </section>
     </main>
     <footer
-      class="px-20 py-16 text-white bg-black"
+      class="px-20 py-16 text-gray-300 bg-black"
     >
-      <div class="grid grid-cols-2 lg:grid-cols-4 gap-20">
+      <div class="grid grid-cols-2 lg:grid-cols-4 gap-20 lato">
         <div>
-          <h1>Comfy_Corner</h1>
-          <p>
+          <h1 class="text-xl text-indigo-600 font-semibold pb-4">Comfy_Corner</h1>
+          <p class="text-gray-400">
             Your one step shop for all your fashion and lifestyle needs. Quality
             products, fast delivery, and excellent support.
           </p>
         </div>
         <div>
-          <ul>
-            <li><a href="">Quick Links</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
+          <ul class="flex flex-col gap-2">
+            <li><a href="" class="text-gray-400 font-semibold text-lg">Quick Links</a></li>
+            <li><a href="index.hrml">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
           </ul>
         </div>
         <div>
-          <ul>
-            <li><a href="">Support</a></li>
+          <ul class="flex flex-col gap-2">
+            <li><a href="" class="text-gray-400 font-semibold text-lg">Support</a></li>
             <li><a href="">FAQ</a></li>
             <li><a href="">Shopping</a></li>
             <li><a href="">Return</a></li>
@@ -210,7 +212,7 @@
           </ul>
         </div>
         <div>
-          <h1>Subscribe to our Newsletter</h1>
+          <h1 class="text-gray-400 font-semibold text-xl">Subscribe to our Newsletter</h1>
           <p class="py-4">
             The latest news, articles and resources send to your inbox weekly.
           </p>
@@ -224,7 +226,7 @@
           </div>
         </div>
       </div>
-      <hr>
+      <hr class="my-5">
       <div class="flex justify-between items-center">
         <div>
           <p>@ Comfy Corner. All right reserved.</p>
